fixed z-index bugs

--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -371,7 +371,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
-    /* z-index: 1500; */
+    z-index: 3;
     display: none;
   }
 
