--- a/client/src/components/sort-filter/SortFilter.css
+++ b/client/src/components/sort-filter/SortFilter.css
@@ -37,7 +37,7 @@
   background-color: white;
   position: sticky;
   top: 12rem;
-  z-index: 1;
+  z-index: 2;
 }
 
 .sort-filter .sortButton {
@@ -69,8 +69,8 @@
   gap: 1rem;
   position: absolute;
   top: 5.9rem;
-  right: 11.1rem;
-  border-radius: 3px;
+  right: 11.3rem;
+  border-radius: 1px;
   background-color: rgb(255, 255, 255);
   border: 1px solid rgba(0, 0, 0, 0.35);
 }
@@ -91,7 +91,6 @@
   text-transform: uppercase;
   cursor: pointer;
   transition: 0.3s all ease-in-out;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,7 +125,7 @@
   transition: transform 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
-  z-index: 3000;
+  z-index: 4;
 }
 
 @media (max-width: 1024px) {
